feat: added challenge.js, some mods to index.js and updated package.json name property

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "challeng1-solana",
+  "name": "challenge1-solana",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
